--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,28 @@
 doctype html
+mixin item(title, url)
+  li 
+    a(href=url class=path == url ? 'active' : '')=title
+
+
+
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    ul
+      +item('Strona główna', '/')
+      +item('Aktualności', '/news')
+      +item('Quiz', '/quiz')
+      +item('Admin', '/admin')
+    //-  zamaist tego co ponieżej utworzyliśmy mixin i dodalismy to co powyżej, krótsza wersja dużo bardziej przejzysta 
+      //- li 
+      //-   a(href="/") Strona główna
+      //- li 
+      //-   a(href="/news") Aktualności
+      //- li 
+      //-   a(href="/quiz") Quiz
+      //- li 
+      //-   a(href="/admin") Admin
+
     block content
